# PrecomputeAtmosphereLUT

./: .gitmodules  CMakeLists.txt  README.md  build.bat  config.json  precompute.bat  preview.bat  preview_sequence.bat
app/: main.cpp  preview.cpp
cmake/: AtmosphereBakeConfig.cmake.in
data/: PVL_Spectrum.csv
include/: asset_format.h  atmosphere_math.h  cie1931_2deg_1nm.h  config_io.h  csv_table_io.h  meta_data.h  preview_common.h  sampling.h
src/: bake_common.cuh  bake_irradiance.cu  bake_scattering.cu  bake_sky_single_scatter.cu  bake_sun_transmittance.cu  bake_transmittance.cu  cie1931_2deg_1nm.cpp  config_io.cpp  csv_table_io.cpp  device_common.cuh  preview_io.cpp  preview_render.cpp  serializer.cpp
